Coffee Machine Frontend Layer Implementation Draft Why: * Implementation of Draft version of frontend client using Vue.js without backend application layer This change addresses the need by: * Implementation of Main Panel with coffee preparation list * Implementation of Diagnostic Panel with status of Coffee Machine * Routing between Panels * Implementation of Popup Dialog used in frontend application

--- a/coffee-machine-client/package.json
+++ b/coffee-machine-client/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "0.18.0",
+    "es6-promise": "4.2.5",
+    "node-sass": "4.10.0",
+    "sass-loader": "7.1.0",
     "vue": "2.5.17",
-    "vue-material": "1.0.0-beta-10.2"
+    "vue-material": "1.0.0-beta-10.2",
+    "vue-moment": "4.0.0",
+    "vue-resource": "1.5.1",
+    "vue-router": "3.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.1.1",
