--- a/coffee-machine-server/package.json
+++ b/coffee-machine-server/package.json
@@ -13,7 +13,7 @@
     "prestart:prod": "rimraf dist && tsc",
     "start:prod": "node dist/main.js",
     "lint": "tslint -p tsconfig.json -c tslint.json",
-    "test": "jest",
+    "test": "jest --config ./test/jest-unit-tests.json",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:e2e": "jest --config ./test/jest-e2e.json"
@@ -22,12 +22,16 @@
     "@nestjs/common": "5.4.1",
     "@nestjs/core": "5.4.1",
     "@nestjs/mongoose": "5.2.2",
+    "dotenv": "6.1.0",
     "mongo-unit": "1.3.4",
     "mongoose": "5.3.14",
+    "nest-schedule": "0.4.4",
+    "nest-winston": "^1.0.2",
     "reflect-metadata": "0.1.12",
     "rimraf": "2.6.2",
     "rxjs": "6.3.3",
-    "typescript": "3.2.1"
+    "typescript": "3.2.1",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "@nestjs/testing": "5.4.1",
