--- a/coffee-machine-server/tsconfig.json
+++ b/coffee-machine-server/tsconfig.json
@@ -12,7 +12,8 @@
     "target": "es6",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "lib": ["es2015"]
   },
   "include": [
     "src/**/*"
