--- a/coffee-machine-server/package.json
+++ b/coffee-machine-server/package.json
@@ -26,7 +26,7 @@
     "mongo-unit": "1.3.4",
     "mongoose": "5.3.14",
     "nest-schedule": "0.4.4",
-    "nest-winston": "^1.0.2",
+    "nest-winston": "1.0.2",
     "reflect-metadata": "0.1.12",
     "rimraf": "2.6.2",
     "rxjs": "6.3.3",
