--- a/coffee-machine-client/package.json
+++ b/coffee-machine-client/package.json
@@ -16,7 +16,8 @@
     "vue-material": "1.0.0-beta-10.2",
     "vue-moment": "4.0.0",
     "vue-resource": "1.5.1",
-    "vue-router": "3.0.2"
+    "vue-router": "3.0.2",
+    "vuex": "3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.1.1",
