--- a/coffee-machine-client/package.json
+++ b/coffee-machine-client/package.json
@@ -17,9 +17,11 @@
     "vue-moment": "4.0.0",
     "vue-resource": "1.5.1",
     "vue-router": "3.0.2",
-    "vuex": "3.0.1"
+    "vuex": "3.0.1",
+    "register-service-worker": "1.5.2"
   },
   "devDependencies": {
+    "@vue/cli-plugin-pwa": "3.2.2",
     "@vue/cli-plugin-babel": "3.1.1",
     "@vue/cli-plugin-eslint": "3.1.5",
     "@vue/cli-service": "3.1.4",
